--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,20 +8,61 @@ body {
     color: #2d545e;
 }
 
-.swal-button--confirm:hover, .swal-button--confirm:focus, .swal-button--confirm:active  {
-    background-color: #835b30; /* Darker Night Blue Shadow */
-    color: #ffffff;
+.swal-modal {
+    background-color: #c89666;
+    border-radius: 12px;
+    padding: 20px;
 }
+
+.swal-title {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #131f23;
+}
+
+.swal-text {
+    font-size: 1rem;
+    text-align: center;
+    color: #2d545e;
+}
+
+
+
+
+.swal-button {
+    background-color: #2d545e;
+    color: #ffffff;
+    border: 2px solid #12343b;
+    padding: 14px 30px;
+    border-radius: 10px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    display: inline-block;
+}
+
+.swal-button:hover {
+    background-color: #835b30;
+    color: #ffffff;
+    border: 2px solid #2d545e;
+    transform: translateY(-3px);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.swal-button:focus {
+    outline: 3px solid #c89666;
+    outline-offset: 3px;
+    background-color: #2d545e;
+}
+
 
 .card {
     background-color: #e1b382;
-    /*border-radius: 12px;*/
-    /*box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.1);*/
-    border: 1px solid #c89666;
     padding: 2px;
 }
 
-button, .swal-button {
+button {
     background-color: #2d545e;
     color: #ffffff;
     border: 2px solid #12343b;
@@ -34,7 +75,7 @@ button, .swal-button {
     display: inline-block;
 }
 
-button:hover, .swal-button:hover {
+button:hover{
     background-color: #835b30;
     color: #ffffff;
     border: 2px solid #2d545e;
@@ -42,14 +83,14 @@ button:hover, .swal-button:hover {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-button:focus, .swal-button:focus {
+button:focus {
     outline: 3px solid #c89666;
     outline-offset: 3px;
     background-color: #2d545e;
 }
 
 
-button:active, .swal-button:active {
+button:active{
     background-color: #835b30;
     color: #ffffff;
     transform: translateY(1px);
@@ -67,15 +108,17 @@ input {
     border: 2px solid #2d545e;
     background-color: #e1b382;
     color: #2d545e;
-    font-size: 0.5rem;
-    font-weight: 600;
-    transition: all 0.3s ease;
-    width: 100%;
-    box-sizing: border-box;
+
 }
 
 
-input:hover {
+.swal-input, .swal-input:hover, .swal-input:focus{
+    font-size: 1.5rem;
+    background-color: #ffffff;
+    color: #2d545e;
+}
+
+input:hover{
     background-color: #c89666;
     border-color: #12343b;
     color: #2d545e;
@@ -100,12 +143,6 @@ h1, h2, h3, h4 {
     font-weight: 600;
 }
 
-.swal-content__input, .swal-content__input:hover,.swal-content__input:focus {
-    background-color: #ffffff;
-
-}
-
-
 
 .swal-modal {
     background-color: #c89666;
@@ -121,9 +158,6 @@ h1, h2, h3, h4 {
     text-align: center;
 }
 
-.swal-bg {
-    background-color: #e1b382;
-}
 
 .custom-line {
     border: none;
