--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
     height: 100vh;
+    overflow-y: auto;
     margin: 0;
     font-family: "Playwrite CO Guides", serif;
     font-weight: 400;
@@ -28,8 +29,6 @@ body {
 }
 
 
-
-
 .swal-button {
     background-color: #2d545e;
     color: #ffffff;
@@ -48,7 +47,7 @@ body {
     color: #ffffff;
     border: 2px solid #2d545e;
     transform: translateY(-3px);
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .swal-button:focus {
@@ -76,12 +75,12 @@ button {
     display: inline-block;
 }
 
-button:hover{
+button:hover {
     background-color: #835b30;
     color: #ffffff;
     border: 2px solid #2d545e;
     transform: translateY(-3px);
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 button:focus {
@@ -91,7 +90,7 @@ button:focus {
 }
 
 
-button:active{
+button:active {
     background-color: #835b30;
     color: #ffffff;
     transform: translateY(1px);
@@ -113,13 +112,13 @@ input {
 }
 
 
-.swal-input, .swal-input:hover, .swal-input:focus{
+.swal-input, .swal-input:hover, .swal-input:focus {
     font-size: 1.5rem;
     background-color: #ffffff;
     color: #2d545e;
 }
 
-input:hover{
+input:hover {
     background-color: #c89666;
     border-color: #12343b;
     color: #2d545e;
@@ -139,7 +138,7 @@ input:focus {
 }
 
 
-h1, h2, h3, h4 {
+h1,  h3, h4 {
     color: #131f23;
     font-weight: 500;
 }
